# hw3-jortega-berkeley

./: .gitignore  MakeFile  README.md  ai_documentation.txt  index.md  myst.yml  pyproject.toml
.github/workflows/: pages.yml
ligotools/: readligo.py  utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
