[build-system]
requires = ["setuptools>=68", "wheel", "numpy>=1.21"] 
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
description = "Utilities for the LIGO Gravitational Wave tutorial (STAT 159/259 HW3)."
authors = [
  { name = "Ligo Scientific Collaboration (LSC)" },
  { name = "Joseph Ortega" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.5",
  "h5py>=3.7",
  "pytest>=7.0",
  "mystmd>=1.2"   
]

[project.urls]
Homepage = "https://github.com/<your-username>/<your-repo>"

[tool.setuptools]
packages = ["ligotools"]
